nws change history
------------------

1.14 09/03/2022
1.  Better NWS alerts.

    Added the following new fields for alerts:
    id              : urn:oid:2.49.0.1.840.0.ba84e467a918f2f79303ebc47a234e87d285ab2f.003.1
    expires         : 2022-09-03 15:00:00 PDT (1662242400)
    sent            : 2022-09-03 05:37:00 PDT (1662208620)
    status          : Actual
    messageType     : Update
    category        : Met
    severity        : Moderate
    certainty       : Likely
    urgency         : Expected
    sender          : w-nws.webmaster@noaa.gov
    senderName      : NWS San Francisco CA

    ******* IMPORTANT, you must delete the existing nws database (nws.sdb) if        *******
    ******* udating from v.1.13.1 or earlier.  Do this just before restaring weewx.  *******
    ******* This is necessary because the schema has changed.                        *******

    If you have nws v.13.1 or earlier, and you don't delete the existing nws database, nws
    will not work and the following will be in the log:
    ERROR user.nws: You must delete the nws.sdb database and restart weewx.  It contains an old schema!
    Note: there will also be other nws errors in the log.

1.13.1 09/02/2022
1. Alerts bug fix.

1.13 09/02/2022
1. Don't show alerts past their expiration time (this is in addition to not showing
   superseded alerts--which was fixed in v1.12).

1.12 08/31/2022
1. Properly implement ignoring expired alerts (this is a workaround due to an nws issue.
   The previous workaround was ignoring the new alert and keeping the expired alert!

1.11 06/11/2022
1. Added a standalone utility to test if NWS will return the correct forecast grid and,
   if it doesn't, figure out the correct grid and print the lines to add to the [NWS]
   section of weewx.conf so that the correct grid is used.
   Sample running of check_grid utility:
   $ ./check_grid.py --latitude 37.431495 --longitude -122.110937